# arch

./: .gitignore  package-lock.json  package.json  readme.md  tailwind.config.js
assets/: app.css  input.css
docs/: site.md
docs/en/: architecture.md  compute.md  data.md  getting-started.md  incident-response.md  index.md  monitoring.md  nav.md  network.md  template.md  welcome.md
docs/hi/: architecture.md  getting-started.md  index.md  welcome.md
docsgen/: Cargo.toml
docsgen/src/: main.rs
docsgen/templates/: page.html
scripts/: watch-docs.sh
