[package]
name = "docsgen"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6"
actix-web = "4"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
notify = "6"
pulldown-cmark = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1.20"
walkdir = "2"
